Change token query param name to accessToken
