# src/controllers/foo/bar.controller.js
@@ -4,7 +4,7 @@ module.exports = (models) => ({
     res.json({
       message: 'You made it to the secure route',
       user: req.user,
-      token: req.query.secret_token,
+      accessToken: req.query.accessToken,
     });
   },
 });
